--- a/code/Makefile.common
+++ b/code/Makefile.common
@@ -145,6 +145,7 @@ FILESYS_HDR = ../filesys/directory.hh       \
               ../filesys/directory_entry.hh \
               ../filesys/file_header.hh     \
               ../filesys/file_system.hh     \
+              ../filesys/lockFileSys.hh     \
               ../filesys/open_file.hh       \
               ../filesys/raw_directory.hh   \
               ../filesys/raw_file_header.hh \
@@ -153,6 +154,7 @@ FILESYS_HDR = ../filesys/directory.hh       \
 FILESYS_SRC = ../filesys/directory.cc   \
               ../filesys/file_header.cc \
               ../filesys/file_system.cc \
+              ../filesys/lockFileSys.cc \
               ../filesys/fs_test.cc     \
               ../filesys/open_file.cc   \
               ../filesys/synch_disk.cc  \
@@ -160,6 +162,7 @@ FILESYS_SRC = ../filesys/directory.cc   \
 FILESYS_OBJ = directory.o   \
               file_header.o \
               file_system.o \
+              lockFileSys.o \
               fs_test.o     \
               open_file.o   \
               synch_disk.o  \
